--- a/rayhan-gumay.html
+++ b/rayhan-gumay.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rayhan for a sleep</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rayhan</h1>
@@ -12,5 +13,6 @@
     <p>
         vat besi khayle muta howa jay.r lauhffhaskldfjahghdflkgj.
     </p>
+    <p>am i be a coder will proper</p>
 </body>
 </html>
