--- a/rayhan-gumay.html
+++ b/rayhan-gumay.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rayhan</h1>
+    <h1>Rayhan add a new formula</h1>
     <h2>new code change</h2>
     <p>
         vat besi khayle muta howa jay.r lauhffhaskldfjahghdflkgj.
