--- a/rayhan-gumay.html
+++ b/rayhan-gumay.html
@@ -14,5 +14,6 @@
         vat besi khayle muta howa jay.r lauhffhaskldfjahghdflkgj.
     </p>
     <p>am i be a coder will proper</p>
+    <img src="lal.jfif" alt="">
 </body>
 </html>
