--- a/rayhan-gumay.html
+++ b/rayhan-gumay.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rayhan for a sleep</title>
+    <title>Rayhan for a sleep </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rayhan add a new formula</h1>
     <h2>new code change</h2>
+    <div>
+        <h3>new blog</h3>
+        <h4>look mama i can write a blog</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem molestiae hic laboriosam consectetur id quod adipisci pariatur, porro delectus, temporibus architecto cupiditate optio, esse distinctio. Corporis architecto dolor doloremque quae voluptatum repellendus, impedit iste possimus sunt nihil ipsa nulla voluptates.</p>
+    </div>
     <p>
         vat besi khayle muta howa jay.r lauhffhaskldfjahghdflkgj.
     </p>
